# mbed-hal-nrf51822-mcu

./: CMakeLists.txt  LICENSE  module.json
bootstrap_armcc/: startup_nRF51822.S  startup_nRF51822_16k.S  startup_nRF51822_32k.S  sys.cpp
bootstrap_gcc/: startup_nRF51822.S
mbed-hal/: PinDefs.h  chip_pins.array
mbed-hal-nrf51822-mcu/: PinNames.h  gpio_object.h  objects.h  rtc_int.h  target_config.h
mbed-hal-nrf51822-mcu/lib/: LICENSE
mbed-hal-nrf51822-mcu/lib/nordic_sdk/components/libraries/util/: app_util.h
mbed-hal-nrf51822-mcu/lib/s130_nrf51822_1_0_0/: LICENSE
source/: analogin_api.c  gpio_api.c  gpio_irq_api.c  i2c_api.c  lp_ticker.c  pinmap.c  pwmout_api.c  rtc_api.c  rtc_int.c  serial_api.c  sleep.c  spi_api.c  us_ticker.c
